style fix -- h1 "game over" when CPU wins was not following dark mode

--- a/src/main/resources/static/css/playgame.css
+++ b/src/main/resources/static/css/playgame.css
@@ -4,11 +4,6 @@ body {
     color: rgb(59, 47, 93, .85);
     }
 
-h1 {
-    font-weight: 500;
-    color: rgb(59, 47, 93, .90);
-}
-
 .card-placeholder-left {
     width: 250px;
     height: 432px;
